ready for heroku

--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "mongoose": "^5.5.15",
     "morgan": "^1.9.1",
     "webpack": "^5.19.0"
+  },
+  "devDependencies": {
+    "webpack-cli": "^4.4.0"
   }
 }
