--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
   
 },
   "scripts": {
-    "build": "webpack --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node.js",
+    "start": "node server.js",
     "lite-server": "lite-server"
   },
   "repository": {
@@ -28,10 +27,6 @@
     "express": "^4.17.1",
     "lite-server": "^2.5.3",
     "mongoose": "^5.5.15",
-    "morgan": "^1.9.1",
-    "webpack": "^5.19.0"
-  },
-  "devDependencies": {
-    "webpack-cli": "^4.4.0"
+    "morgan": "^1.9.1"
   }
 }
